--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "typescriptlearning",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "(npx parcel ./index.html) & npx parcel watch ./index.html"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "parcel": "^2.11.0",
+    "prettier": "3.2.5"
   }
 }
